kube/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hellodj-service
  labels:
    app.kubernetes.io/instance: hellodj
    app.kubernetes.io/managed-by: kubectl
    app.kubernetes.io/name: hellodj
    app.kubernetes.io/component: namespace
    helm.sh/chart: hellodj-0.1.0
