kube/potoken-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: potoken-server
  namespace: hellodj-service
  labels:
    app.kubernetes.io/instance: hellodj
    app.kubernetes.io/managed-by: kubectl
    app.kubernetes.io/name: potoken-server
    app.kubernetes.io/component: lavalink
    helm.sh/chart: hellodj-0.1.0
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 4416
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: hellodj
    app.kubernetes.io/name: potoken-server
