kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellodj
  namespace: hellodj-service
  annotations:
    traefik.ingress.kubernetes.io/affinity: "true"
  labels:
    app.kubernetes.io/instance: hellodj
    app.kubernetes.io/managed-by: kubectl
    app.kubernetes.io/name: hellodj
    app.kubernetes.io/component: bot
    helm.sh/chart: hellodj-0.1.0
spec:
  type: ClusterIP
  ports:
    - name: lavalink
      port: 2333
      protocol: TCP
      targetPort: lavalink
    - name: activity
      port: 8090
      protocol: TCP
      targetPort: activity
  selector:
    app.kubernetes.io/instance: hellodj
    app.kubernetes.io/name: hellodj
