kube/web-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellodj-web-ui
  namespace: hellodj-service
  labels:
    app.kubernetes.io/instance: hellodj
    app.kubernetes.io/managed-by: kubectl
    app.kubernetes.io/name: hellodj-web-ui
    app.kubernetes.io/component: web-ui
    helm.sh/chart: hellodj-0.1.0
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/instance: hellodj
    app.kubernetes.io/name: hellodj-web-ui
