kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hellodj-ingress
  namespace: hellodj-service
  annotations:
    cert-manager.io/cluster-issuer: celestium-le-production
    traefik.ingress.kubernetes.io/affinity: "true"
  labels:
    app.kubernetes.io/instance: hellodj
    app.kubernetes.io/managed-by: kubectl
    app.kubernetes.io/name: hellodj
    app.kubernetes.io/component: ingress
    helm.sh/chart: hellodj-0.1.0
spec:
  ingressClassName: traefik
  rules:
    - host: hellodj.celestium.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hellodj-web-ui
                port:
                  number: 8080
  tls:
    - hosts:
        - hellodj.celestium.life
      secretName: hellodj-tls
